tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00083.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00083.c" (c, x86_64-unknown-linux-gnu)
fn one(%arg5: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg5: s32i):
        %58 = alloca s32i, "a", align 4
        %59 = alloca s32i, "__retval", align 4
        store %arg5, %58
        scope {
            %62 = load %58 : s32i, align 4
            %63 = const 1 : s32i
            %64 = cmp ne %62, %63 : bool
            if %64 {
                %65 = const 1 : s32i
                store %65, %59
                %66 = load %59 : s32i
                return %66
            }
            yield
        }
        %60 = const 0 : s32i
        store %60, %59
        %61 = load %59 : s32i
        return %61
}
fn two(%arg3: s32i, %arg4: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg3: s32i, %arg4: s32i):
        %43 = alloca s32i, "a", align 4
        %44 = alloca s32i, "b", align 4
        %45 = alloca s32i, "__retval", align 4
        store %arg3, %43
        store %arg4, %44
        scope {
            %53 = load %43 : s32i, align 4
            %54 = const 1 : s32i
            %55 = cmp ne %53, %54 : bool
            if %55 {
                %56 = const 1 : s32i
                store %56, %45
                %57 = load %45 : s32i
                return %57
            }
            yield
        }
        scope {
            %48 = load %44 : s32i, align 4
            %49 = const 2 : s32i
            %50 = cmp ne %48, %49 : bool
            if %50 {
                %51 = const 1 : s32i
                store %51, %45
                %52 = load %45 : s32i
                return %52
            }
            yield
        }
        %46 = const 0 : s32i
        store %46, %45
        %47 = load %45 : s32i
        return %47
}
fn three(%arg0: s32i, %arg1: s32i, %arg2: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s32i, %arg2: s32i):
        %22 = alloca s32i, "a", align 4
        %23 = alloca s32i, "b", align 4
        %24 = alloca s32i, "c", align 4
        %25 = alloca s32i, "__retval", align 4
        store %arg0, %22
        store %arg1, %23
        store %arg2, %24
        scope {
            %38 = load %22 : s32i, align 4
            %39 = const 1 : s32i
            %40 = cmp ne %38, %39 : bool
            if %40 {
                %41 = const 1 : s32i
                store %41, %25
                %42 = load %25 : s32i
                return %42
            }
            yield
        }
        scope {
            %33 = load %23 : s32i, align 4
            %34 = const 2 : s32i
            %35 = cmp ne %33, %34 : bool
            if %35 {
                %36 = const 1 : s32i
                store %36, %25
                %37 = load %25 : s32i
                return %37
            }
            yield
        }
        scope {
            %28 = load %24 : s32i, align 4
            %29 = const 3 : s32i
            %30 = cmp ne %28, %29 : bool
            if %30 {
                %31 = const 1 : s32i
                store %31, %25
                %32 = load %25 : s32i
                return %32
            }
            yield
        }
        %26 = const 0 : s32i
        store %26, %25
        %27 = load %25 : s32i
        return %27
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %17 = const 1 : s32i
        %18 = call @one(%17) : s32i [all]
        %19 = cast(int_to_bool) %18 : bool
        if %19 {
            %20 = const 2 : s32i
            store %20, %0
            %21 = load %0 : s32i
            return %21
        }
        yield
    }
    scope {
        %11 = const 1 : s32i
        %12 = const 2 : s32i
        %13 = call @two(%11, %12) : s32i [all]
        %14 = cast(int_to_bool) %13 : bool
        if %14 {
            %15 = const 3 : s32i
            store %15, %0
            %16 = load %0 : s32i
            return %16
        }
        yield
    }
    scope {
        %4 = const 1 : s32i
        %5 = const 2 : s32i
        %6 = const 3 : s32i
        %7 = call @three(%4, %5, %6) : s32i [all]
        %8 = cast(int_to_bool) %7 : bool
        if %8 {
            %9 = const 4 : s32i
            store %9, %0
            %10 = load %0 : s32i
            return %10
        }
        yield
    }
    %2 = const 0 : s32i
    store %2, %0
    %3 = load %0 : s32i
    return %3
}
